L4 : integration tests - java 11